syntax = "proto3";

package pb;

enum ErrorCode {
    None = 0;
    // This master is not leader right now.
    MasterNotLeader = 1;
    // Executor has been removed so it can't be recognized.
    UnknownExecutor = 2;
    // no enough resource can be used.
    NotEnoughResource = 3;
    // submit subjob failed
    SubJobSubmitFailed = 4;
    // TombstoneExecuto
    TombstoneExecutor = 5;
    //
    SubJobBuildFailed = 6;
    // create gRPC connection failed
    BuildGrpcConnFailed  = 7;
    // unknown or upsupported metastore type
    InvalidMetaStoreType = 8;
    // MasterNotReady means the master is staring up, and not ready to serve
    MasterNotReady = 9;
    UnKnownJob = 10;
    // metastore not exists
    MetaStoreNotExists = 11;
    // metastore serialize fail
    MetaStoreSerializeFail = 12;
    // job status is not expected for the operation.
    UnexpectedJobStatus = 13;
    
    UnknownError = 10001;
}

message NotLeader {
    // The requested server address
    string request = 1;
    // leader address
    string leader = 2;
}

message Error {
    ErrorCode code = 1;
    string message = 2;

    NotLeader not_leader = 3;
}
